...
    
    func endGame() {
        statisticService.store(correct: presenter.correctAnswers, total: questionsAmount )
        let message = presenter.makeResultsMessage()
        
        let alertModel = AlertModel(
            title: "Игра окончена",
            message: message,
            buttonText: "Начать заново",
            completion: {[weak self] in
                guard let self = self else { return }
                presenter.restartGame()
                presenter.showNextQuestionOrResults()
...
